--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -162,6 +162,7 @@
 }
 
 #langNav {
+  z-index: 1031;
   height: 24px;
   background: transparent;
   margin-top: 10px;
